--- a/MouseRobotProject_Project.csproj
+++ b/MouseRobotProject_Project.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{fff36084-9713-4415-8251-ea2bfd86aff3}</ProjectGuid>
+    <ProjectGuid>{c4d0b05b-d894-4eb3-9daa-5d5c6556fbad}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MouseRobotProject</RootNamespace>
@@ -68,9 +68,9 @@
 	<Compile Include="Assets\Scripts\CustomCommand.cs"/>
 	<Compile Include="Assets\Scripts\CustomCommandDesigner.cs"/>
 	<Compile Include="Assets\Scripts\CustomCommandRunner.cs"/>
-	<Compile Include="Assets\Scripts\CustomFeatureDetector.cs"/>
-	<Compile Include="Assets\Scripts\CustomScreenPainter.cs"/>
-	<Compile Include="Assets\Scripts\CustomSettings.cs"/>
+	<Compile Include="Assets\Scripts\New folder\CustomFeatureDetector.cs"/>
+	<Compile Include="Assets\Scripts\New folder\CustomScreenPainter.cs"/>
+	<Compile Include="Assets\Scripts\New folder\CustomSettings.cs"/>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
  </Project>
